# OnConstraintsInFirstOrderOptimization

./: Readme.txt
constrainedGD/src/: DefineSettings.h  DenseMatrix.cpp  DenseMatrix.h  QuadraticProgram.cpp  QuadraticProgram.h  SOCP.cpp  SOCP.h  SparseMatrixCRS.cpp  SparseMatrixCRS.h  Utils.cpp  Utils.h
constrainedGDlib/: CMakeLists.txt
constrainedGDlib/src/: constrainedGDlib.cpp
python/: Alg2.py  proxSOR.py
python/Catenary/: main.py  solveCatenary.py
python/RandomQP/: runRandomQPCpp.py
python/ThrustRegion/: runThrustRegionCpp.py
python/nuSVM/: runNuSVMCpp.py
